@@ -1,8 +1,12 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.110 2005/05/02 14:33:21 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.111 2005/05/04 06:13:52 agaffney Exp $
 
 *GLI-gtkfe-0.01 (11 Dec 2004)
+
+  4 May 2005; Andrew Gaffney <agaffney@gentoo.org>
+  More idiot-proofing: mountpoint/opts fields disables for swap and mountopts
+  defaults to 'defaults' if blank and a mountpoint is specified
 
   2 May 2005; Andrew Gaffney <agaffney@gentoo.org>
   Readded resizing support.
